[gd_scene load_steps=15 format=3 uid="uid://bad47gtbl4pka"]

[ext_resource type="Script" path="res://enemy.gd" id="1_3pgqn"]
[ext_resource type="Texture2D" uid="uid://02b4710u4fij" path="res://Sprites/TileSet.png" id="1_gbddo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_keuiy"]
size = Vector2(36, 27)

[sub_resource type="Animation" id="Animation_41nl4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(22, 18)]
}

[sub_resource type="Animation" id="Animation_5uxw2"]
resource_name = "death"
length = 2.7
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(22, 18), Vector2i(23, 18), Vector2i(24, 18), Vector2i(25, 18), Vector2i(26, 18), Vector2i(27, 18), Vector2i(28, 18), Vector2i(29, 18), Vector2i(30, 18)]
}

[sub_resource type="Animation" id="Animation_0lam4"]
resource_name = "down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(26, 17), Vector2i(27, 17)]
}

[sub_resource type="Animation" id="Animation_4xs34"]
resource_name = "left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(28, 17), Vector2i(29, 17)]
}

[sub_resource type="Animation" id="Animation_keavm"]
resource_name = "right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(30, 17), Vector2i(31, 17)]
}

[sub_resource type="Animation" id="Animation_p6xrl"]
resource_name = "up"
length = 0.5
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(24, 17), Vector2i(23, 17)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fslsr"]
_data = {
"RESET": SubResource("Animation_41nl4"),
"death": SubResource("Animation_5uxw2"),
"down": SubResource("Animation_0lam4"),
"left": SubResource("Animation_4xs34"),
"right": SubResource("Animation_keavm"),
"up": SubResource("Animation_p6xrl")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fntsn"]
size = Vector2(282, 267)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rtv0s"]
size = Vector2(374, 268)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gy1r6"]
size = Vector2(283, 268)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m8rtc"]
size = Vector2(376, 265)

[node name="enemy" type="CharacterBody2D"]
position = Vector2(-4, -2)
collision_layer = 7
collision_mask = 7
script = ExtResource("1_3pgqn")

[node name="enemy_shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.631373)
texture_filter = 1
position = Vector2(4, 0)
scale = Vector2(1.359, 1.359)
texture = ExtResource("1_gbddo")
hframes = 32
vframes = 64
frame = 32

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(2, -28)
scale = Vector2(3, 3)
texture = ExtResource("1_gbddo")
hframes = 32
vframes = 32
frame = 598

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -11.5)
shape = SubResource("RectangleShape2D_keuiy")

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, -11.5)
shape = SubResource("RectangleShape2D_keuiy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fslsr")
}

[node name="left" type="Area2D" parent="." groups=["left"]]
rotation = -3.73403

[node name="CollisionShape2D" type="CollisionShape2D" parent="left"]
position = Vector2(-137, -131.5)
shape = SubResource("RectangleShape2D_fntsn")

[node name="up" type="Area2D" parent="." groups=["up"]]
rotation = -3.73403

[node name="CollisionShape2D" type="CollisionShape2D" parent="up"]
position = Vector2(193, -132)
shape = SubResource("RectangleShape2D_rtv0s")

[node name="down" type="Area2D" parent="." groups=["down"]]
rotation = -3.73403

[node name="CollisionShape2D" type="CollisionShape2D" parent="down"]
position = Vector2(-137.5, 136)
shape = SubResource("RectangleShape2D_gy1r6")

[node name="right" type="Area2D" parent="." groups=["right"]]
rotation = -3.73403

[node name="CollisionShape2D" type="CollisionShape2D" parent="right"]
position = Vector2(193, 135.5)
shape = SubResource("RectangleShape2D_m8rtc")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered_player_with"]
[connection signal="area_entered" from="left" to="." method="_on_left_area_entered"]
[connection signal="area_entered" from="up" to="." method="_on_up_area_entered"]
[connection signal="area_entered" from="down" to="." method="_on_down_area_entered"]
[connection signal="area_entered" from="right" to="." method="_on_right_area_entered"]
